@startuml
left to right direction
skinparam linetype ortho

entity Client {
    +id : int <<PK>>
    clientLastName : varchar(100)
    clientFirstName : varchar(100)
    clientEmail : varchar(255)
    clientPhone : varchar(20)
    companyName : varchar(150)
    clientAddress : varchar(255)
    clientCity : varchar(255)
    clientCountry : varchar(100)
    siren : varchar(20)
    vatNumber : varchar(20)
    businessActivity : varchar(100)
    rcsNumber : varchar(50)
    shareCapital : numeric(15,2)
    socialNetworks : varchar(255)
    legalForm : varchar(100)
    logo : bytea
}

entity AuditType {
    +id : int <<PK>>
    nameAuditType : varchar(100)
}

entity AuditOffer {
    +id : int <<PK>>
    nameAuditOffer : varchar(100)
}

entity Status {
    +id : int <<PK>>
    auditStatus : varchar(50)
}

entity Audit {
    +id : int <<PK>>
    auditName : varchar(150)
    template : boolean
    archived : boolean
    idAuditType : int <<FK>>
    idAuditOffer : int <<FK>>
    idStatus : int <<FK>>
}

entity Theme {
    +id : int <<PK>>
    themeName : varchar(150)
}

entity Type {
    +id : int <<PK>>
    typeName : varchar(100)
}

entity Question {
    +id : int <<PK>>
    label : varchar(255)
    idTheme : int <<FK>>
    descriptions : text
    status : text
}

entity OptionAnswer {
    +id : int <<PK>>
    optionLabel : varchar(255)
    optionPoints : int
    idType : int <<FK>>
}

entity ClientAnswer {
    +id : int <<PK>>
    clientAnswer : text
    clientAnswerPoints : int
    idQuestion : int <<FK>>
    idAudit : int <<FK>>
}

entity Participate {
    participationDate : date
    idClient : int <<FK>>
    idAudit : int <<FK>>
}

entity Own {
    idAudit : int <<FK>>
    idTheme : int <<FK>>
}

entity Contain {
    idQuestion : int <<FK>>
    idOptAnswer : int <<FK>>
}

entity Modify {
    idmodify : int <<PK>>
    modificationDate : date
    modificationTime : time
    idAudit : int <<FK>>
    idUser : UUID
}

' =======================
' Relations
' =======================

AuditType "1" -- "0..*" Audit
AuditOffer "1" -- "0..*" Audit
Status "1" -- "0..*" Audit

Theme "1" -- "0..*" Question
Type "1" -- "0..*" OptionAnswer

Question "1" -- "0..*" ClientAnswer
Audit "1" -- "0..*" ClientAnswer

Client "0..*" -- "0..*" Audit
(Client, Audit) .. Participate

Audit "0..*" -- "0..*" Theme
(Audit, Theme) .. Own

Question "0..*" -- "0..*" OptionAnswer
(Question, OptionAnswer) .. Contain

Audit "0..*" -- "0..*" Modify

@enduml
